[package]
name = "troika_rust"
version = "0.1.0"
authors = ["Yu Wei Wu <wusyong9104@gmail.com>", "c-mnd"]
edition = "2018"

[dependencies]
failure = "0.1"
ict = "0.1.3"

[dev-dependencies]
criterion = "0.2"
rand = "0.6"

[[bench]]
name = "troika_benchmark"
harness = false

[profile.dev]
opt-level = 3
#debug = false

[profile.release]
opt-level = 3
