[package]
name = "troika-rust"
version = "0.1.1"
authors = ["Yu Wei Wu <wusyong9104@gmail.com>", "c-mnd"]
license = "MIT"
keywords = ["iota"]
repository = "https://github.com/wusyong/troika_rust"
homepage = "https://github.com/wusyong/troika_rust"
description = "Troika hash reference in rust"
edition = "2018"

[lib]
name = "troika_rust"

[dependencies]
failure = "0.1"
ict = "0.1.3"

[dev-dependencies]
criterion = "0.2"
rand = "0.6"

[[bench]]
name = "troika_benchmark"
harness = false

[profile.dev]
opt-level = 3
#debug = false

[profile.release]
opt-level = 3
